--- a/styles/project.module.css
+++ b/styles/project.module.css
@@ -13,6 +13,8 @@
   font-weight: 400;
 }
 
+
+
 .projectHeading {
   padding: 5vw 0 6vw 0;
   width: 80%;
@@ -43,12 +45,31 @@
   font-size: 8vw;
   color: #1a1a1a;
   line-height: 1;
+  height: 150px;
+}
+
+.projectHomeHeading{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  margin-right: 20vw;
 }
 
 .projectHeading .project {
   font-size: 8vw;
   margin-left: 9vw;
   color: #5d5ad6;
+}
+
+
+.lineAnim{
+  position: relative;
+  overflow: hidden;
+}
+
+.lineAnim .span{
+ position: absolute;
 }
 
 .projectSubSection {
@@ -302,12 +323,18 @@
   }
 
   .projectHeading .select {
-    font-size: 13vw;
+    font-size: 14vw;
+    height: 60px;
   }
 
+  .projectHomeHeading {
+    width: 120%;
+    height: 70px;
+    margin-right: 20vw;
+}
+
   .projectHeading .project {
-    font-size: 13vw;
-    margin-left: 27vw;
+    font-size: 14vw;
   }
 
   .projectSubSection {
