--- a/styles/workProject.module.css
+++ b/styles/workProject.module.css
@@ -43,12 +43,30 @@
   font-size: 8vw;
   color: #1a1a1a;
   line-height: 1;
+  height: 150px;
 }
 
 .projectHeading .project {
   font-size: 8vw;
   margin-left: 16vw;
   color: #5d5ad6;
+}
+
+.projectHomeHeading{
+  width: 120%;
+  height: 170px;
+  display: flex;
+  justify-content: center;
+  margin-right: 30vw;
+}
+
+.lineAnim{
+  position: relative;
+  overflow: hidden;
+}
+
+.lineAnim .span{
+ position: absolute;
 }
 
 .projectSubSection {
@@ -78,10 +96,12 @@
 
 .glideContent img {
   width: 100%;
-  height: 110%;
+  height: 120%;
   position: absolute;
   top: -15%;
   left: 0;
+  bottom: 0;
+  right: 0;
   object-fit: cover;
   object-position: center;
 }
