--- a/styles/patronum.module.css
+++ b/styles/patronum.module.css
@@ -587,6 +587,10 @@
   .mobileFont {
     display: none;
   }
+  
+  .nextUpContainer {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1920px) {
