--- a/styles/wragby.module.css
+++ b/styles/wragby.module.css
@@ -124,7 +124,7 @@
 
   .thirdSectionContent {
     width: 75%;
-    height: 60vh;
+    height: 100%;
     margin: 10vw auto 0 auto;
     display: flex;
     justify-content: space-between;
@@ -133,9 +133,6 @@
   .thirdSectionLeftBox {
     width: 40%;
     height: 100%;
-    /* display: flex;
-    justify-content: flex-start;
-    align-items: center; */
   }
 
   .thirdSectionLeftBox h1 {
@@ -192,7 +189,6 @@
     font-weight: 600;
     color: #1a1a1a;
     text-transform: uppercase;
-    padding-top: 8vw;
   }
 
   .forthSectionRightBox {
@@ -202,7 +198,6 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    padding-top: 8vw;
   }
 
   .paraTop h1 {
@@ -281,7 +276,7 @@
 
   .logoSection {
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 
   .logoContentSection {
@@ -443,7 +438,7 @@
   }
 
   .colorBoxesSection {
-    width: 70%;
+    width: 55%;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -470,7 +465,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.7vw;
+    font-size: 1.2vw;
     line-height: 1.5;
     font-weight: 500;
     font-family: 'Gilroy';
@@ -487,8 +482,8 @@
   }
 
   .colorOne {
-    width: 280px;
-    height: 280px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     background: #E30B25;
     z-index: 1;
@@ -498,43 +493,43 @@
   }
 
   .colorTwo {
-    width: 280px;
-    height: 280px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     z-index: 1;
     background: #2C5ED1;
     position: absolute;
-    left: 13vw;
+    left: 10vw;
   }
 
   .colorThree {
-    width: 280px;
-    height: 280px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     z-index: 1;
     background: #FFFFFF;
     position: absolute;
-    left: 26vw;
+    left: 20vw;
   }
 
   .colorFour {
-    width: 280px;
-    height: 280px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     z-index: 1;
     background: #E7EDEF;
     position: absolute;
-    left: 39vw;
+    left: 30vw;
   }
 
   .colorFive {
-    width: 280px;
-    height: 280px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     z-index: 1;
     background: #151515;
     position: absolute;
-    left: 52vw;
+    left: 40vw;
   }
 
   .videoHeading {
@@ -552,7 +547,7 @@
 
   .videoForthSection {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
   }
 
   .videoContainer {
@@ -801,12 +796,12 @@
     }
 
     .firstLogoBox {
-      height: 100vh;
+      height: 50vh;
       margin-right: 3vw;
     }
 
     .secondLogoBox {
-      height: 100vh;
+      height: 50vh;
     }
 
     .secondLogoBox h1 {
